--- a/Karol/Karol - Backup.csproj
+++ b/Karol/Karol - Backup.csproj
@@ -9,16 +9,14 @@ Roboter können in einer Welt tolle sachen machen...</Description>
     <PackageIconUrl />
     <Authors>Daniel Müller</Authors>
     <Company>AdamSandler GmbH</Company>
-    <PackageTags>Karol, Roboter, LERNEN, Cool, AdamSandler, Egon34</PackageTags>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <DocumentationFile>Karol.xml</DocumentationFile>
+    <DocumentationFile>H:\Daten\Fächer_12\TrFi\Karol_C_Gartenzaun\Karol\Karol\Karol.xml</DocumentationFile>
     <Optimize>false</Optimize>
-    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
-    <DefineConstants>TRACE</DefineConstants>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <OutputPath>H:\Daten\Fächer_12\TrFi\Karol_C_Gartenzaun\Karol\Karol\Karol.xml</OutputPath>
+    <GenerateSerializationAssemblies>On</GenerateSerializationAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
