--- a/Doc/filterConfig.yml
+++ b/Doc/filterConfig.yml
@@ -14,6 +14,12 @@ apiRules:
 - include:
     uidRegex: ^Karol\.Controller
     type: Class
+- include: 
+    uidRegex: ^Karol\.Core\.RobotOptions
+    type: Class
+- include: 
+    uidRegex: ^Karol\.Core\.ImageSet
+    type: Class
 
 - exclude:
     uidRegex: ^Karol\.Core
