Mehr Fehler im Roboter z.B. beim aufheben eines ZIegels wenn kein ziegel da ist... und mehr doc

--- a/Doc/Doc.csproj
+++ b/Doc/Doc.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="articles\" />
+    <Folder Include="articles\downloads\data\" />
   </ItemGroup>
 
 </Project>
